# generic-byzantine-fault-tolerance

./: Cargo.toml  README.md
.metals/: metals.h2.db
reports/scenarios/: expected_latency.txt  slowdown_factor_100ms.txt  slowdown_factor_10ms.txt  slowdown_factor_200ms.txt  slowdown_factor_50ms.txt
src/: lib.rs  main.rs
src/banking/: action.rs  banking.rs  mod.rs  transaction.rs
src/crypto/: identity_table.rs  mod.rs
src/database/: client_database.rs  database.rs  message_result_database.rs  mod.rs  replica_database.rs  request_database.rs
src/error/: mod.rs
src/network/: mod.rs  network.rs  network_info.rs  network_peer.rs
src/peer/: coordinator.rs  mod.rs  peer.rs  runner.rs  shutdownable.rs
src/peer/handler/: client_handler.rs  communicator.rs  faulty_client_handler.rs  faulty_replica_handler.rs  mod.rs  peer_handler.rs  replica_handler.rs
src/playground/: mod.rs  playground.rs
src/relation/: conflict.rs  mod.rs
src/settings/: mod.rs  runner_settings.rs  system_settings.rs
src/system/: byzantine_system.rs  client.rs  command.rs  message.rs  mod.rs  network_info.rs  peer.rs  peer_runner.rs  peer_system.rs  replica.rs  runner.rs  settings.rs
src/system/runner/: client.rs  mod.rs  peer.rs  peer_runner.rs  replica.rs  runner.rs
src/talk/: command.rs  command_result.rs  feedback.rs  feedback_channel.rs  feedback_receiver.rs  feedback_sender.rs  instruction.rs  message.rs  mod.rs  request.rs
src/tests/: mod.rs  scenarios.rs  simulation.rs  slowdown_factor.rs  util.rs
src/time/: delay.rs  mod.rs  timeout.rs
src/types/: mod.rs
(+2 files in other folders)
