[package]
name = "genericbft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12", features = ["full"] }
futures = "0.3"
talk = { git = "https://github.com/Distributed-EPFL/talk", features = ["test_utilities"] } 
rand = "0.8.4"
serde = { version = "~1.0", features = [ "derive", "rc" ] }

