[package]
name = "genericbft"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12", features = ["full"] }
futures = { version = "0.3" }
talk = { git = "https://github.com/Distributed-EPFL/talk", features = ["test_utilities"] } 
rand = { version = "0.8.4" }
serde = { version = "~1.0", features = [ "derive", "rc" ] }
rand_distr = "0.4.2"
uuid = { version = "0.8", features = ["serde", "v4"]}
async-trait = "0.1.52"
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }